Added a structure for login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Farmily</string>
+        <string name="app_name">Farmily</string>
+        <string-array name="user_roles">
+            <item>Customer</item>
+            <item>Farmer</item>
+        </string-array>
 </resources>
